[IMP] web: improve color picker styles and resolve popover layout issue
This commit improves the color picker popover by addressing style
inconsistencies and fixing layout problems:

- Applied same padding across "Solid", "Custom", and "Gradient" tabs.
- Applied same styles to input field (position, angle, hex) for consistency.
- Fixed content overflow inside the popover, allowing excess content to scroll
  when it exceeds the maximum height.

task-5047830

X-original-commit: bd856e05c574b0a93f073255a5f5ce87c791868c

--- a/addons/html_builder/static/src/core/building_blocks/builder_colorpicker.scss
+++ b/addons/html_builder/static/src/core/building_blocks/builder_colorpicker.scss
@@ -11,6 +11,10 @@
     background-color: $o-we-item-clickable-bg;
     color: $white;
 
+    &:has(.theme-tab){
+        width: 250px;
+    }
+
     & > div:first-child {
         background-color: $o-we-bg-darker;
         padding-block: 0.5em;
@@ -105,19 +109,8 @@
     .gradient-angle-thumb {
         background-color: $white;
     }
-    .gradient-angle-knob + input[name=angle],
-    input[name=positionX],
-    input[name=positionY] {
-        @extend %o-hb-input-base;
 
-        & + .input-group-text {
-            background-color: revert;
-            border: revert;
-            color: inherit;
-        }
-    }
-
-    .o_color_picker_inputs {
+    .o_color_picker_inputs, .o_color_gradient_input {
         color: $o-we-item-clickable-color;
 
         & input {
